[metadata]
name = karpiu
version = attr: karpiu.__version__
author = Edwin Ng
author_email = edwinnglabs@gmail.com
description = this is a package designed for building marketing mix model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edwinnglabs/karpiu
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.8.0
include_package_data = True